# deepredeff-py

./: LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: anaconda-publish.yaml
conda-build/: build_env.yaml  deploy.sh  meta.yaml
src/deepredeff/: main.py
src/deepredeff/data/: __init__.py
