[metadata]
name = deepredeff-py
version = 0.0.1
author = Darcy Jones
author_email = darcy.ab.jones@gmail.com
description = "A python port of the deepredeff R package."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darcyabjones/deepredeff-py
project_urls =
    Bug Tracker = https://github.com/darcyabjones/deepredeff-py/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10



[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    biopython
    tensorflow
    pandas
    numpy

tests_require =
    pytest
    pytest-cov
    tox

[options.extras_require]
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    numpydoc
    matplotlib
dev =
    pytest
    pytest-cov
    tox
    mypy
    pandas
    jupyter

[options.packages.find]
where = src

[options.package_data]
deepredeff =
    **.csv
    **.hdf5

[options.entry_points]
console_scripts = 
    deepredeff = deepredeff.main:main

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
